--- a/project/package.json
+++ b/project/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "description": "최종 프로젝트 폴더입니다",
+  "description": "",
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,5 +20,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "chart.js": "^2.9.4"
   }
 }
